<resources>
    <string name="app_name">Nailsoft File Manager</string>
    <string name="app_version">v0.1a</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="open">Open</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="settings">Settings</string>
    <string name="pasteAll">Paste all</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="make">Make</string>
    <string name="order">Order</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="extracting">Extracting archive</string>
    <string name="icon">icon</string>
    <string name="keep">Keep</string>
    <string name="compress">Compress</string>
    <string name="paste">Paste</string>

    <string name="orderBy">Order by</string>
    <string name="date_modified">Date modified</string>
    <string name="new_directory">New directory</string>
    <string name="copy_content">Copy content</string>
    <string name="cut_content">Cut content</string>
    <string name="select_all">Select all</string>
    <string name="openAs">Open as...</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="request_permissions_toast">File manager is useless without permissions to access your files. Isn\'t it?</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="delete_dialog_title">Deleting files</string>
    <string name="delete_single_dir_message">Delete directory \'%s\' with all files and subdirectories permanently?</string>
    <string name="delete_single_file_message">Delete file \'%s\' permanently?</string>
    <string name="delete_format_many_message">Delete %d objects permanently?</string>
    <string name="open_file">Open \'%s\' with</string>
    <string name="share_file">Share \'%s\' with</string>
    <string name="file_size_format">size: %s</string>
    <string name="explanation_permission">File manager is useless if not granted access to storage</string>
    <string name="moving_files">Moving files</string>
    <string name="unarchive_dialog_subtitle">Should we keep the source file?</string>
    <string name="compress_files">Compress file(s)</string>
    <string name="search_tab_subtitle">Search:</string>
    <string name="confirm_copy_single">Copy &lt;b&gt;%1$s&lt;/b&gt; to &lt;b&gt;%2$s&lt;/b&gt;?</string>
    <string name="confirm_move_single">Move &lt;b&gt;%1$s&lt;/b&gt; to &lt;b&gt;%2$s&lt;/b&gt;?</string>
    <string name="error_share_app_not_found">Application not available</string>

    <plurals name="confirm_copy_many">
        <item quantity="one">Copy &lt;b&gt;%1$s&lt;/b&gt; object to &lt;b&gt;%2$s&lt;/b&gt;?</item>
        <item quantity="few">Copy &lt;b&gt;%1$s&lt;/b&gt; objects to &lt;b&gt;%2$s&lt;/b&gt;?</item>
        <item quantity="many">Copy &lt;b&gt;%1$s&lt;/b&gt; objects to &lt;b&gt;%2$s&lt;/b&gt;?</item>
    </plurals>

    <plurals name="confirm_move_many">
        <item quantity="one">Move &lt;b&gt;%1$s&lt;/b&gt; object to &lt;b&gt;%2$s&lt;/b&gt;?</item>
        <item quantity="few">Move &lt;b&gt;%1$s&lt;/b&gt; objects to &lt;b&gt;%2$s&lt;/b&gt;?</item>
        <item quantity="many">Move &lt;b&gt;%1$s&lt;/b&gt; objects to &lt;b&gt;%2$s&lt;/b&gt;?</item>
    </plurals>

    <plurals name="confirm_paste_many_mixed">
        <item quantity="one">Paste &lt;b&gt;%1$s&lt;/b&gt; object to &lt;b&gt;%2$s&lt;/b&gt;?</item>
        <item quantity="few">Paste &lt;b&gt;%1$s&lt;/b&gt; objects to &lt;b&gt;%2$s&lt;/b&gt;?</item>
        <item quantity="many">Paste &lt;b&gt;%1$s&lt;/b&gt; objects to &lt;b&gt;%2$s&lt;/b&gt;?</item>
    </plurals>

    <plurals name="confirm_paste_many_move">
        <item quantity="one">Move &lt;b&gt;%1$s&lt;/b&gt; object to &lt;b&gt;%2$s&lt;/b&gt;?</item>
        <item quantity="few">Move &lt;b&gt;%1$s&lt;/b&gt; objects to &lt;b&gt;%2$s&lt;/b&gt;?</item>
        <item quantity="many">Move &lt;b&gt;%1$s&lt;/b&gt; objects to &lt;b&gt;%2$s&lt;/b&gt;?</item>
    </plurals>

    <plurals name="confirm_paste_many_copy">
        <item quantity="one">Copy &lt;b&gt;%1$s&lt;/b&gt; object to &lt;b&gt;%2$s&lt;/b&gt;?</item>
        <item quantity="few">Copy &lt;b&gt;%1$s&lt;/b&gt; objects to &lt;b&gt;%2$s&lt;/b&gt;?</item>
        <item quantity="many">Copy &lt;b&gt;%1$s&lt;/b&gt; objects to &lt;b&gt;%2$s&lt;/b&gt;?</item>
    </plurals>


    <array name="open_type">
        <item>Text</item>
        <item>Image</item>
        <item>Audio</item>
        <item>Video</item>
    </array>
</resources>
