<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/order"
            android:enabled="true"
            android:theme="@style/AppTheme">
            <menu>
                <item android:id="@+id/order_name"
                    android:title="@string/name"/>

                <item android:id="@+id/order_create"
                      android:title="@string/date_created"/>

                <item android:id="@+id/order_modified"
                      android:title="@string/date_modified"/>

                <item android:id="@+id/order_size"
                      android:title="@string/size"/>
            </menu>
        </item>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>

</menu>
